feat: implement discount creation and validation logic